--- a/css/default.css
+++ b/css/default.css
@@ -135,7 +135,7 @@ img {
     border-radius: 4px;
 }
 
-figure.middle svg {
+figure.middle > svg {
     display: block;
     max-width: 100%;
     height: auto;
