--- a/css/default.css
+++ b/css/default.css
@@ -1,10 +1,13 @@
 /* Body & Defaults */
 
+html {
+    font-size: 18px;
+}
+
 body {
     margin: 40px auto;
     max-width: 800px;
     line-height: 1.6;
-    font-size: 18px;
     color: #333;
     padding: 0 10px;
     hyphens: auto;
